--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -5,9 +5,11 @@
             <h1 style="text-align: center;">Welcome To The Safety M3SH</h1>
             <div style="width: 30%; margin:30px auto;">
                 <div style="width: 30%; margin:30px auto;">
-                <div class="form-group">
-                        <button class="btn btn-lg btn-primary" href="/3dmodel">Proceed!</button>
-                    </div>
+                    <form action="/3dmodel" method="GET">
+                        <div class="form-group">
+                            <button class="btn btn-lg btn-primary" href="/3dmodel">Proceed!</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
