--- a/views/partials/headermodel.ejs
+++ b/views/partials/headermodel.ejs
@@ -11,6 +11,10 @@
             <!--<link rel = "stylesheet" href="/stylesheets/main.css">-->
             
             <script src="../public/libraries/three.js"></script>
+            <script src="../public/libraries/bendmodifier.js"></script>
+            <script src="../public/libraries/convexgeometry.js"></script>
+            <script src="../public/libraries/quickhull.js"></script>
+            
             <script src="../public/structures.js"></script>
             <script src="../public/operators.js"></script>
             <script src="../public/controller.js"></script>
