--- a/m3sh/Base.lproj/Main.storyboard
+++ b/m3sh/Base.lproj/Main.storyboard
@@ -22,15 +22,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="4LV-hh-0Kz">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Report" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
                                 <rect key="frame" x="108" y="43" width="158" height="42"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WGw-x5-Qpn">
+                                <rect key="frame" x="134" y="166" width="106" height="30"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Stop Streaming"/>
+                                <connections>
+                                    <action selector="stop:" destination="9pv-A4-QxB" eventType="touchUpInside" id="yEc-HC-KpG"/>
+                                </connections>
+                            </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="1H4-oG-DFD">
                                 <rect key="frame" x="36" y="236" width="302" height="29"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <segments>
                                     <segment title="Request Assistance"/>
                                     <segment title="Safe"/>
@@ -41,30 +54,28 @@
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kTo-8A-dAA">
                                 <rect key="frame" x="100" y="113" width="175" height="30"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Stream Location"/>
                                 <connections>
                                     <action selector="start:" destination="9pv-A4-QxB" eventType="touchUpInside" id="RjC-M1-Cx5"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WGw-x5-Qpn">
-                                <rect key="frame" x="134" y="166" width="106" height="30"/>
-                                <state key="normal" title="Stop Streaming"/>
-                                <connections>
-                                    <action selector="stop:" destination="9pv-A4-QxB" eventType="touchUpInside" id="yEc-HC-KpG"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="1H4-oG-DFD" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="APK-CE-F6l"/>
+                            <constraint firstItem="4LV-hh-0Kz" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="ImG-QI-ETG"/>
                             <constraint firstItem="KQZ-1w-vlD" firstAttribute="centerX" secondItem="kTo-8A-dAA" secondAttribute="centerX" id="Oxc-1p-Z6r"/>
                             <constraint firstItem="1H4-oG-DFD" firstAttribute="top" secondItem="WGw-x5-Qpn" secondAttribute="bottom" constant="40" id="WQ0-Sz-aMi"/>
                             <constraint firstItem="WGw-x5-Qpn" firstAttribute="top" secondItem="kTo-8A-dAA" secondAttribute="bottom" constant="23" id="a6Y-Ta-zmz"/>
+                            <constraint firstAttribute="bottom" secondItem="4LV-hh-0Kz" secondAttribute="bottom" id="bV9-kA-5no"/>
                             <constraint firstItem="KQZ-1w-vlD" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="23" id="el3-ab-Mgw"/>
+                            <constraint firstItem="4LV-hh-0Kz" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="j3x-Hm-JAH"/>
                             <constraint firstItem="1H4-oG-DFD" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="20" id="kNT-dH-IsH"/>
                             <constraint firstItem="kTo-8A-dAA" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="84" id="kdX-Uz-Qjh"/>
                             <constraint firstItem="kTo-8A-dAA" firstAttribute="centerX" secondItem="1H4-oG-DFD" secondAttribute="centerX" id="krj-LU-eY6"/>
                             <constraint firstItem="KQZ-1w-vlD" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="92" id="mQ2-5h-FxF"/>
+                            <constraint firstItem="4LV-hh-0Kz" firstAttribute="centerX" secondItem="WGw-x5-Qpn" secondAttribute="centerX" id="sOE-Lt-FMp"/>
                             <constraint firstItem="WGw-x5-Qpn" firstAttribute="centerX" secondItem="kTo-8A-dAA" secondAttribute="centerX" id="sj3-ZQ-RAB"/>
                             <constraint firstItem="kTo-8A-dAA" firstAttribute="top" secondItem="KQZ-1w-vlD" secondAttribute="bottom" constant="28" id="wV6-RV-wDP"/>
                         </constraints>
@@ -92,45 +103,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="t3E-DP-zRv">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="1920"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M5Q-fG-5qZ">
-                                <rect key="frame" x="118" y="318" width="125" height="30"/>
+                                <rect key="frame" x="125" y="301" width="125" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="125" id="d8k-Rq-TjP"/>
+                                    <constraint firstAttribute="width" constant="125" id="kAr-CT-KA0"/>
                                 </constraints>
-                                <state key="normal" title="Start Advertising"/>
+                                <state key="normal" title="Start Advertising">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="startAdvertising:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="h9h-4k-jW7"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8ix-GN-Bkq">
-                                <rect key="frame" x="130" y="235" width="100" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="738-hP-Eh4"/>
-                                </constraints>
-                                <state key="normal" title="Browse"/>
-                                <connections>
-                                    <action selector="browse:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="MME-o1-26z"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LTN-UE-IXD">
-                                <rect key="frame" x="110" y="395" width="140" height="30"/>
+                                <rect key="frame" x="117" y="406" width="140" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="140" id="3aB-Uy-xZ9"/>
+                                    <constraint firstAttribute="width" constant="140" id="ycx-6D-AzJ"/>
                                 </constraints>
-                                <state key="normal" title="Stop Advertising"/>
+                                <state key="normal" title="Stop Advertising">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="stopAdvertising:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="y3O-YG-ozZ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8ix-GN-Bkq">
+                                <rect key="frame" x="137" y="178" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="p0N-Ri-GOF"/>
+                                </constraints>
+                                <state key="normal" title="Browse">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="browse:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="MME-o1-26z"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Djb-ko-YwX" firstAttribute="top" secondItem="LTN-UE-IXD" secondAttribute="bottom" constant="193" id="5w4-1I-ny4"/>
-                            <constraint firstItem="LTN-UE-IXD" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leadingMargin" constant="94" id="Gs6-ML-VXA"/>
-                            <constraint firstItem="M5Q-fG-5qZ" firstAttribute="top" secondItem="8ix-GN-Bkq" secondAttribute="bottom" constant="53" id="QVf-Mr-TiR"/>
-                            <constraint firstItem="M5Q-fG-5qZ" firstAttribute="centerX" secondItem="LTN-UE-IXD" secondAttribute="centerX" id="Xi7-7U-vBo"/>
-                            <constraint firstItem="8ix-GN-Bkq" firstAttribute="centerX" secondItem="M5Q-fG-5qZ" secondAttribute="centerX" id="Y0h-hy-KOx"/>
-                            <constraint firstItem="M5Q-fG-5qZ" firstAttribute="centerY" secondItem="QS5-Rx-YEW" secondAttribute="centerY" id="wjU-hC-3cF"/>
+                            <constraint firstItem="t3E-DP-zRv" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" id="6fS-ce-kNC"/>
+                            <constraint firstItem="M5Q-fG-5qZ" firstAttribute="centerX" secondItem="LTN-UE-IXD" secondAttribute="centerX" id="Ikl-BL-ofk"/>
+                            <constraint firstItem="M5Q-fG-5qZ" firstAttribute="top" secondItem="8ix-GN-Bkq" secondAttribute="bottom" constant="93" id="UFa-0C-9YZ"/>
+                            <constraint firstItem="M5Q-fG-5qZ" firstAttribute="top" secondItem="QS5-Rx-YEW" secondAttribute="top" constant="301" id="UJL-ZM-3AZ"/>
+                            <constraint firstItem="8ix-GN-Bkq" firstAttribute="centerX" secondItem="M5Q-fG-5qZ" secondAttribute="centerX" id="ZZH-ci-rdG"/>
+                            <constraint firstItem="LTN-UE-IXD" firstAttribute="centerX" secondItem="t3E-DP-zRv" secondAttribute="centerX" id="cSD-V0-LEc"/>
+                            <constraint firstAttribute="trailing" secondItem="t3E-DP-zRv" secondAttribute="trailing" id="mmp-j1-Nyd"/>
+                            <constraint firstItem="LTN-UE-IXD" firstAttribute="top" secondItem="M5Q-fG-5qZ" secondAttribute="bottom" constant="75" id="tW9-ge-AhP"/>
+                            <constraint firstItem="t3E-DP-zRv" firstAttribute="top" secondItem="QS5-Rx-YEW" secondAttribute="top" id="zPe-5F-SVh"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="m3sh" image="second" id="cPa-gy-q4n" userLabel="m3sh"/>
@@ -150,7 +173,18 @@
                     <view key="view" contentMode="scaleToFill" id="iCm-wG-K6S">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="azA-h1-n8d">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="azA-h1-n8d" firstAttribute="bottom" secondItem="dWY-On-dmg" secondAttribute="top" id="1Z2-4g-7jw"/>
+                            <constraint firstItem="azA-h1-n8d" firstAttribute="leading" secondItem="iCm-wG-K6S" secondAttribute="leading" id="BTP-uX-BUX"/>
+                            <constraint firstItem="azA-h1-n8d" firstAttribute="top" secondItem="iCm-wG-K6S" secondAttribute="top" id="DD3-cR-q0A"/>
+                            <constraint firstAttribute="trailing" secondItem="azA-h1-n8d" secondAttribute="trailing" id="oOI-A1-Lph"/>
+                        </constraints>
                     </view>
                     <connections>
                         <segue destination="49e-Tb-3d3" kind="show" identifier="seguetomain" id="nb7-je-Sea"/>
@@ -158,7 +192,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="roa-5f-VcC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-848" y="-6"/>
+            <point key="canvasLocation" x="-848.79999999999995" y="-6.746626686656672"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -181,6 +215,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bg.png" width="1080" height="1920"/>
         <image name="first" width="30" height="30"/>
         <image name="second" width="30" height="30"/>
     </resources>
